# shopee-crawler-cli

./: .env.example  .gitignore  README.md  launch_chrome_debug.bat  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  setup.bat  setup.sh
src/shopee_cli/: __init__.py  __main__.py  cli.py
src/shopee_cli/ai/: __init__.py  claude_provider.py  deepseek_provider.py  engine.py  exceptions.py  gemini_provider.py  http.py  models.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  prompt_builder.py  provider.py  report_writer.py
src/shopee_cli/analytics/: engine.py  location.py  models.py  price.py  quality.py  rating.py  sales.py  seller.py  statistics.py
src/shopee_cli/browser/: __init__.py  exceptions.py  isolated.py  main_chrome.py  manager.py  models.py  shopee.py
src/shopee_cli/collectors/: exceptions.py  models.py  parser.py  scrolling.py  search_collector.py  selectors.py
src/shopee_cli/commands/: analytics.py  browser.py  export.py  insight.py  menu.py  search.py  status.py  version.py
tests/: test_ai_engine.py  test_ai_prompt_builder.py  test_ai_provider.py  test_ai_report_writer.py  test_analytics_engine.py  test_analytics_statistics.py  test_browser_implementations.py  test_browser_models.py  test_cli.py  test_excel_exporter.py  test_excel_workbook.py  test_export_filenames.py  test_export_repository.py  test_export_summary.py  test_menu.py  test_normalization.py  test_scrolling.py  test_search_collector.py  test_search_parser.py  test_search_repository.py  test_search_validation.py  test_shopee_helpers.py
(+18 files in other folders)
